tests/negative/gold/class-cycle-test.gold
tests/negative/class-cycle-test.toit:5:7: error: Cycle in super chain
class A extends B:
      ^
tests/negative/class-cycle-test.toit:5:17: error: This clause contributes to the cycle
class A extends B:
                ^
tests/negative/class-cycle-test.toit:7:17: error: This clause contributes to the cycle
class B extends A:
                ^
Compilation failed
